src/Test/ElementLayout/FeatureTests/TestData/XAML/TestCases/NegativeMargins/NegMarginAndRenderTran.xaml
<Grid Name="root" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
    <Button Height="100" Width="100" Margin="-33,0,0,-90" HorizontalAlignment="Left" VerticalAlignment="Top">
        <Button.RenderTransform>
            <ScaleTransform ScaleX="1.9" ScaleY="1.9" />
        </Button.RenderTransform>
    </Button>
</Grid>
